...
                        enabled = modelDidChange,
                        colors = ButtonDefaults.textButtonColors(
                            contentColor = MaterialTheme.colorScheme.primary,
                            disabledContentColor = MaterialTheme.colorScheme.tertiary
                        ),
                        modifier = Modifier.
                            testTag("addEditHotelButton")
                    ) {
                        Text(
                            text = "SAVE",
                            fontSize = 16.sp
                        )
                    }
...
                    label = { Text("Name") },
                    colors = TextFieldDefaults.colors(
                        unfocusedContainerColor = Color.Transparent
                    ),
                    modifier = Modifier
                        .fillMaxWidth()
                        .testTag("hotelNameTextField")
                )
                TextField(
                    value = hotel?.title.orEmpty(),
                    onValueChange = { viewModel.updateHotel { copy(title = it) } },
                    label = { Text("Title") },
                    colors = TextFieldDefaults.colors(
...
