...
                    .padding(vertical = 12.dp)
                    .testTag("SortByNameRow"),
                horizontalArrangement = Arrangement.Center,
                verticalAlignment = Alignment.CenterVertically
            ) {
                Text(
                    text = "Sort by name",
                    style = MaterialTheme.typography.bodyLarge,
                    color = Color.Gray,
                    modifier = Modifier
                        .clickable { viewModel.onSortButtonTapped() }
                        .padding(end = 4.dp)
                )
...
                    )
                    
                    IconButton(
                        onClick = { onAddHotel() },
                        modifier = Modifier
                            .align(Alignment.CenterEnd)
                            .testTag("HomeScreenPlusButton")
                    ) {
                        Icon(
                            imageVector = Icons.Default.Add,
                            contentDescription = "Add",
                            tint = MaterialTheme.colorScheme.background
                        )
...
                // Search bar in the header
                OutlinedTextField(
                    value = searchText,
                    onValueChange = { viewModel.onSearchTextChanged(it) },
                    placeholder = { 
                        Text(
                            "Search by Name",
                            color = Color.Gray,
                            fontSize = 16.sp
                        ) 
                    },
                    leadingIcon = {
                        Icon(
...
